--- a/SwiftStudy/Views/Main/MainViewController.xib
+++ b/SwiftStudy/Views/Main/MainViewController.xib
@@ -59,8 +59,11 @@
                     <buttonConfiguration key="configuration" style="plain" title="Button"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G4c-9G-7ue">
-                    <rect key="frame" x="177" y="600" width="60" height="35"/>
+                    <rect key="frame" x="172" y="600" width="70" height="35"/>
                     <color key="backgroundColor" name="AccentColor"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="70" id="e7g-K2-fpo"/>
+                    </constraints>
                     <color key="tintColor" systemColor="labelColor"/>
                     <state key="normal" title="Button"/>
                     <buttonConfiguration key="configuration" style="plain" title="Next"/>
